--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/nycda-geeks/restaurant-pos/issues"
   },
-  "homepage": "https://github.com/nycda-geeks/restaurant-pos#readme"
+  "homepage": "https://github.com/nycda-geeks/restaurant-pos#readme",
+  "dependencies": {
+    "express": "^4.13.4",
+    "pg": "^5.1.0",
+    "sequelize": "^3.23.3"
+  }
 }
