--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.13.4",
     "pg": "^5.1.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^3.23.3"
   }
 }
