--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/nycda-geeks/restaurant-pos#readme",
   "dependencies": {
+    "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "pg": "^5.1.0",
     "pg-hstore": "^2.3.2",
