--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/nycda-geeks/restaurant-pos#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "^5.1.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.23.3"
