--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
