--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "jsonwebtoken": "^7.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^5.1.0",
