--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
+    "express-jwt": "^3.4.0",
     "express-session": "^1.13.0",
     "jsonwebtoken": "^7.0.1",
     "passport": "^0.3.2",
