--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-local": "^1.0.0",
     "pg": "^5.1.0",
     "pg-hstore": "^2.3.2",
+    "request": "^2.72.0",
     "sendgrid": "^3.0.5",
     "sequelize": "^3.23.3"
   }
