trying to merge with david

--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
+    "express-jwt": "^3.4.0",
     "express-session": "^1.13.0",
+    "jsonwebtoken": "^7.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^5.1.0",
     "pg-hstore": "^2.3.2",
+    "request": "^2.72.0",
     "sendgrid": "^3.0.5",
     "sequelize": "^3.23.3",
     "ejs": "~2.3.3",
