--- a/package.json
+++ b/package.json
@@ -32,11 +32,6 @@
     "pg-hstore": "^2.3.2",
     "request": "^2.72.0",
     "sendgrid": "^3.0.5",
-    "sequelize": "^3.23.3",
-    "ejs": "~2.3.3",
-    "morgan": "~1.6.1",
-  },
-  "devDependencies": {
-    "nodemon": "^1.9.2"
-  }
+    "sequelize": "^3.23.3"
+	}
 }
